<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/auth_screens_background"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:src="@mipmap/main_logo"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_75sdp"
                android:fontFamily="@font/tajwal_bold"
                android:text="@string/pick_city_title"
                android:textColor="@color/auth_screens_title_color"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:fontFamily="@font/tajwal_regular"
                android:gravity="center"
                android:text="@string/pick_city_description"
                android:textColor="@color/auth_screens_sub_darker_text_color"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/city_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/tajwal_medium"
                android:text="@string/city"
                android:textColor="@color/auth_screens_black_color"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />

            <EditText
                android:id="@+id/city_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:background="@drawable/spinner_background"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_down_icon"
                android:focusable="false"
                android:fontFamily="@font/tajwal_medium"
                android:gravity="start"
                android:hint="@string/pick_city_hint"
                android:inputType="text"
                android:longClickable="false"
                android:paddingStart="@dimen/_8sdp"
                android:paddingTop="@dimen/_9sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_9sdp"
                android:textAlignment="viewStart"
                android:textColor="@color/auth_screens_title_color"
                android:textColorHint="@color/help_center_description"
                android:textCursorDrawable="@drawable/cursor_shape"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/city_title"
                app:layout_constraintTop_toBottomOf="@id/city_title"
                app:layout_constraintVertical_bias="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>